??/??/2018 rathann, tluchko, orbeckst

  * 0.4.1

  Fixes

  * Fixed testsuite on 32bit architectures (issue #44)
  * Improved DX parsing speed (#2)
  * Fixed reading in DX files containing scientific notation (PR #52)
  * Added missing floordivision to Grid (PR #53)
  * fix test on ARM (#51)
  * fix incorrect reading of ncstart and nrstart in CCP4 (#57)
  * fix that arithemtical operations broke inheritance (#56)
  * fix so that subclasses of ndarray are retained on input (#56)

  Changes (do not affect user)

  * use pytest as testing framework (#49)
  * use truedivision consistently throughout the package and the tests (PR #52)
  * installation now requires scipy (it is much easier to install than it
    used to)

01/17/2017 orbeckst, kain88-de

  * 0.4.0

  Changes/Enhancements

  * Type of DX arrays is now set based on the numpy array dtype or can
    be manually set by the user to increase interoperability with
    tools such as PyMOL (issue #35)

05/13/2016 kain88-de

  * 0.3.3

  Changes

  * Included tempdir module directly

12/11/2015 orbeckst

  * 0.3.2

  Enhancements

  Changes

  * can import without scipy present (scipy.ndimage will only be used
    on demand when interpolation of a Grid is requested) (issue #25)

  Fixes


12/07/2015 orbeckst, richardjgowers

  * 0.3.1

  Enhancements

  Changes

  Fixes

  * fixed writing of DX files failed with "NotImplementedError: Only
    regularly spaced grids allowed." (issue #21 and
    MDAnalysis/mdanalysis#544)

09/22/2015 kain88-de, holocronweavers, orbeckst

  * 0.3.0

  Enhancements

  * Python 3 compatible (issue #5)
  * added subset of CCP4 format (reading)

  Changes

  * unit tests and coverage
  * docs at http://www.mdanalysis.org/GridDataFormats/ are always in
    sync with the master branch,
    http://griddataformats.readthedocs.org are for releases


For previous releases please see the log messages in the git
history. For authors see the file AUTHORS.