@@ -26,6 +26,8 @@ The rules for this file:
   * fix incorrect reading of ncstart and nrstart in CCP4 (#57)
   * fix that arithemtical operations broke inheritance (#56)
   * fix so that subclasses of ndarray are retained on input (#56)
+  * fix Grid.save(filename) so that it respects the user's filename (#64)
+  * fix grid equality test g == h (relied on old numpy behavior)
 
   Changes (do not affect user)
 
